src/objects/UAT_Result__c.object
<CustomObject>
    <description>Results of test runs</description>
    <fields>
        <fullName>Comment__c</fullName>
        <description>Comments</description>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ITS_Feedback__c</fullName>
        <description>Feedback from ITS</description>
        <label>ITS Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <description>Result of the UAT: &quot;Pass&quot; or &quot;Fail&quot;</description>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <description>Related UAT&apos;s sequence number</description>
        <formula>UAT_Scenario__r.Scenario_Sequence_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UAT_ID__c</fullName>
        <description>Related UAT</description>
        <formula>CASESAFEID(UAT_Scenario__r.UAT__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UAT ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UAT_Scenario__c</fullName>
        <description>Related UAT Scenario</description>
        <label>UAT Scenario</label>
        <referenceTo>UAT_Scenario__c</referenceTo>
        <relationshipLabel>UAT Results</relationshipLabel>
        <relationshipName>UAT_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>UAT Result</label>
    <nameField>
        <label>UAT Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UAT Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>